# Dynamic-Wallpaper

./: .gitmodules  Base64Decoded.plist  Cargo.toml  README.md  backgroundChanger.py  dynamic-wallpaper.py  package.json  run.py  svelte.config.js
Compile/: backgroundChanger.py
Task/: DynamicWallpaper.xml
examples/: test.rs  test_1.rs  test_2.rs
src/: app.css  heic.rs  hooks.ts  lib.rs  list.rs  loc.rs  xml.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/plugins/Dynamic-Wallpaper/: Cargo.toml
src-tauri/plugins/Dynamic-Wallpaper/examples/: test.rs
src-tauri/plugins/Dynamic-Wallpaper/src/: build.rs  lib.rs  list.rs
src-tauri/plugins/heic-decoder/: Cargo.toml
src-tauri/plugins/heic-decoder/examples/: test.rs
src-tauri/plugins/heic-decoder/src/: heic.rs  list.rs  loc.rs  sun.rs
src-tauri/src/: build.rs  commands.rs  lib.rs  main.rs
src-tauri/src/wallpaper_tools/: decode.rs
src/lib/: BackButton.svelte  button.svelte  hi.ts
src/lib/WallpaperList/: AddNewCard.svelte  WallaperList.svelte  WallpaperCard.svelte  api.svelte
src/lib/titlebar/: titlebar.svelte
src/routes/: __layout.svelte  index.svelte
src/routes/configurator/: [id].svelte
test/: image.heic
