[package]
name = "app"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
libheif-rs = "0.15.0"
plist = "1"
xml-rs = "0.8.4"
serde_derive = "1.0.136"
serde = "1.0.136"
base64 = "0.13.0"
sun = "0.2"
ipgeolocate = "0.3.5"