[package]
name = "heic-decoder"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 3               # Use slightly better optimizations.
lto = true

[dependencies]
libheif-rs = "0.15.0"
plist = "1"
xml-rs = "0.8.4"
serde_derive = "1.0.136"
serde = "1.0.136"
base64 = "0.13.0"
sun = "0.2"
ipgeolocate = "0.3.5"
public-ip = "0.2"
tokio = { version = "1.17.0", features = ["full"] }
rayon = "1.5.3"
image = "0.24.1"
color-eyre = "0.6.2"
