[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
tauri = { version = "1.0.0", features = ["api-all", "system-tray"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# tauri = { git = "https://github.com/tauri-apps/tauri/", commit="4ae5e34", branch = "next", features = ["api-all", "system-tray"] }
# tauri-plugin-store = {git="https://github.com/tauri-apps/tauri-plugin-store", commit="1cbd9d9"}
log = "0.4.14"
pretty_env_logger = "0.4.0"
libheif-rs = "0.15.0"


[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/tauri-plugin-log"
features = ["colored"]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]


[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/tauri-plugin-store"
commit="9e3732e"
branch = "dev"
